# lua-kmp

./: .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  lua-kmp-spec.md  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: ci.yml
gradle/: libs.versions.toml
native/: revendor.sh
native/jni/: lua_jni.c
native/shim/: lua_all.c  lua_shim.c  lua_shim.h
sample/: README.md  build.gradle.kts
sample/src/commonMain/kotlin/com/seanproctor/lua/sample/: Main.kt
src/androidMain/cpp/: CMakeLists.txt
src/androidMain/kotlin/com/seanproctor/lua/: NativeLibLoader.kt
src/commonMain/kotlin/com/seanproctor/lua/: LuaConfig.kt  LuaException.kt  LuaState.kt  LuaValue.kt  StdLib.kt
src/commonMain/kotlin/com/seanproctor/lua/internal/: BaseLuaState.kt  HandlerRegistry.kt  LeakTracker.kt  Runtime.kt
src/commonTest/kotlin/com/seanproctor/lua/: CallTest.kt  ErrorTest.kt  EvalTest.kt  GlobalsTest.kt  HostFunctionTest.kt  LeakTest.kt  SandboxTest.kt  TableTest.kt
src/jvmMain/kotlin/com/seanproctor/lua/: NativeLibLoader.kt
src/jvmShared/kotlin/com/seanproctor/lua/: JniLuaState.kt  LuaJni.kt
src/jvmShared/kotlin/com/seanproctor/lua/internal/: Platform.kt
src/nativeInterop/cinterop/: lua.def
src/nativeMain/kotlin/com/seanproctor/lua/: NativeLuaState.kt
src/nativeMain/kotlin/com/seanproctor/lua/internal/: Dispatch.kt
src/nativeTest/kotlin/com/seanproctor/lua/: DispatcherStressTest.kt
